# go-grailbio-repro

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.devcontainer/: Dockerfile  devcontainer.json
